# mcp_project

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
papers/artificial_intelligence/: papers_info.json
papers/science/: papers_info.json
references/: L3.ipynb
references/papers/transformer_architecture/: papers_info.json
references/papers/transformers/: papers_info.json
src/: chat_bot.py  client.py  initializer.py  mcp_chatbot.py  mcp_chatbot_v2.py  remote_research_server.py  research_server.py  server_config.json  tools.py
src/papers/mechanics/: papers_info.json
